--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rustpotter-create-model-demo",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Demo for rustpotter model creation, rustpotter is an open source wake word spotter forged in rust",
   "main": "dist/index.js",
   "license": "Apache-2.0",
@@ -13,18 +13,18 @@
     "url": "https://github.com/GiviMAD/rustpotter-create-model-demo"
   },
   "scripts": {
-    "build": "webpack",
-    "build:web": "rm -rf docs && NODE_ENV=production webpack",
-    "start": "webpack-dev-server"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "build:web": "tsc && vite build --outDir docs",
+    "preview": "vite preview"
   },
   "dependencies": {
     "opus-recorder": "^8.0.5",
-    "rustpotter-web": "1.1.1"
+    "rustpotter-web": "2.0.0-beta.3",
+    "wavefile": "^11.0.0"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^11.0.0",
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.0"
+    "typescript": "^4.9.5",
+    "vite": "^4.1.4"
   }
 }
